Add Descrição das Avaliações + home

--- a/app/src/main/res/layout-v21/list_results_searchs.xml
+++ b/app/src/main/res/layout-v21/list_results_searchs.xml
@@ -9,18 +9,23 @@
     >
 
     <LinearLayout
-        android:id="@+id/linearInterno"
-        android:layout_width="match_parent"
+        android:id="@+id/linearInterno"        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <ImageView
+        <RelativeLayout
             android:layout_width="0dp"
-            android:layout_height="62dp"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="0.7"
-            android:alpha="0.9"
-            android:src="@drawable/teacher2" />
+            android:layout_marginLeft="3dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.6">
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_centerInParent="true"
+                android:alpha="0.9"
+                android:src="@drawable/teacher2" />
+        </RelativeLayout>
+
 
         <LinearLayout
             android:layout_width="0dp"
@@ -35,14 +40,14 @@
                 android:layout_height="wrap_content"
                 android:text="Nome Professor"
                 android:textColor="@android:color/black"
-                android:textSize="22dp" />
+                android:textSize="15dp" />
 
             <TextView
                 android:id="@+id/tvResultadoSetor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Setor IMD"
-                android:textSize="18dp" />
+                android:textSize="12dp" />
 
 
         </LinearLayout>
@@ -53,8 +58,8 @@
             android:layout_weight="0.7">
 
             <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:layout_centerInParent="true"
                 android:src="@drawable/seta_more"
                 android:alpha="0.7"/>
@@ -63,13 +68,13 @@
 
     </LinearLayout>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="@color/colorPrimary"
-            android:layout_marginRight="15dp"
-            android:layout_marginLeft="15dp"
-            android:alpha="0.4"
-            />
-    
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@color/colorPrimary"
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="15dp"
+        android:alpha="0.4"
+        />
+
 </LinearLayout>
