--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -16,8 +16,8 @@
         android:icon="@drawable/ic_action_search"/>
     <item
         android:id="@+id/sobreItem"
-        android:title="Sobre"
-        android:icon="@drawable/ic_insert_emoticon"/>
+        android:title="Config"
+        android:icon="@drawable/ic_action_gear"/>
 
     <!--<item-->
         <!--android:id="@+id/optItem"-->
