--- a/app/src/main/res/layout/buscar_fragment.xml
+++ b/app/src/main/res/layout/buscar_fragment.xml
@@ -16,7 +16,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp">
+        android:layout_height="120dp">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -28,7 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginBottom="10dp">
+        >
 
         <EditText
             android:id="@+id/edtBuscar"
@@ -54,6 +54,35 @@
             android:layout_centerInParent="true"
             />
     </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <RadioGroup
+            android:id="@+id/radioButtonBusca"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_centerInParent="true"
+            >
+
+            <RadioButton
+                android:id="@+id/radioDocente"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:text="Docente" />
+
+            <RadioButton
+                android:id="@+id/radioComps"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Componente"/>
+
+        </RadioGroup>
+
+    </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
