--- a/app/src/main/res/layout/details_fragment.xml
+++ b/app/src/main/res/layout/details_fragment.xml
@@ -76,7 +76,8 @@
                     android:layout_marginRight="10dp"
                     android:layout_marginTop="5dp"
                     app:cardCornerRadius="@dimen/cardview_compat_inset_shadow"
-                    app:elevation="10dp">
+                    app:elevation="10dp"
+                    android:id="@+id/layoutSetor">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -91,6 +92,7 @@
                             android:background="@color/colorPrimary" />
 
                         <LinearLayout
+
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="vertical"
@@ -153,6 +155,7 @@
                                 android:paddingLeft="10dp">
 
                                 <TextView
+                                    android:id="@+id/label02"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:text="Admissão:"
@@ -183,7 +186,8 @@
                         android:layout_marginTop="5dp"
                         android:layout_weight="1"
                         app:cardCornerRadius="@dimen/cardview_compat_inset_shadow"
-                        app:elevation="10dp">
+                        app:elevation="10dp"
+                        android:id="@+id/layoutFormacao">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -204,6 +208,7 @@
                                 android:paddingLeft="10dp">
 
                                 <TextView
+                                    android:id="@+id/label03"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:text="Formação:"
@@ -229,6 +234,7 @@
             </LinearLayout>
 
             <TextView
+                android:id="@+id/label04"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
