--- a/app/src/main/res/layout/buscar_fragment.xml
+++ b/app/src/main/res/layout/buscar_fragment.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -28,6 +30,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
         >
 
         <EditText
@@ -38,51 +42,75 @@
             android:layout_marginLeft="5dp"
             android:layout_marginRight="3dp"
             android:drawableLeft="@drawable/ic_search_roxo"
-            android:hint="Digite nome do professor"
+            android:hint="Digite nome"
             android:singleLine="true"
             android:textAlignment="center" />
 
-        <Button
-            android:id="@+id/bttBuscar"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:textColor="@color/colorPrimaryDark"
-            android:layout_marginRight="5dp"
-            android:text="Buscar"
-            android:textAllCaps="false"
-            android:layout_centerInParent="true"
-            />
+
     </LinearLayout>
 
-    <RelativeLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingRight="20dp"
+        android:paddingLeft="20dp">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="12dp"
+            android:text="Tipo:"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.333" />
 
         <RadioGroup
             android:id="@+id/radioButtonBusca"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:orientation="horizontal"
-            android:layout_centerInParent="true"
-            >
+            app:layout_constraintEnd_toStartOf="@+id/bttBuscar"
+            app:layout_constraintStart_toEndOf="@+id/textView"
+            app:layout_constraintTop_toTopOf="parent">
 
             <RadioButton
                 android:id="@+id/radioDocente"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:checked="true"
                 android:text="Docente" />
 
             <RadioButton
                 android:id="@+id/radioComps"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Componente"/>
+                android:layout_height="match_parent"
+                android:text="Componente" />
 
         </RadioGroup>
 
-    </RelativeLayout>
+        <Button
+            android:id="@+id/bttBuscar"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginEnd="28dp"
+            android:text="Buscar"
+            android:textAllCaps="false"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </android.support.constraint.ConstraintLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
