--- a/app/src/main/res/layout/details_fragment.xml
+++ b/app/src/main/res/layout/details_fragment.xml
@@ -31,7 +31,8 @@
                     android:layout_height="wrap_content"
                     android:textColor="@android:color/white"
                     android:text="Nome:"
-                    android:textSize="20dp"
+                    android:maxLines="1"
+                    android:textSize="20sp"
                     android:textStyle="bold"
                     android:textAlignment="center"/>
                 <TextView
@@ -40,7 +41,7 @@
                     android:layout_height="wrap_content"
                     android:text="setor"
                     android:textColor="@android:color/darker_gray"
-                    android:textSize="12dp"
+                    android:textSize="18sp"
                     android:textAlignment="center"/>
 
             </LinearLayout>
@@ -111,8 +112,9 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="setor"
-                                android:textAlignment="textStart"
-                                android:textSize="12dp" />
+                                android:textAlignment="textEnd"
+                                android:layout_marginRight="10dp"
+                                android:textSize="15sp" />
 
 
                         </LinearLayout>
@@ -167,8 +169,9 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:text="data:"
-                                    android:textAlignment="textStart"
-                                    android:textSize="12dp" />
+                                    android:textAlignment="textEnd"
+                                    android:layout_marginRight="10dp"
+                                    android:textSize="15sp" />
 
 
                             </LinearLayout>
@@ -187,7 +190,7 @@
                         android:layout_weight="1"
                         app:cardCornerRadius="@dimen/cardview_compat_inset_shadow"
                         app:elevation="10dp"
-                        android:id="@+id/layoutFormacao">
+                        android:id="@+id/cardFormacao">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -220,8 +223,9 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:text="formacao:"
-                                    android:textAlignment="textStart"
-                                    android:textSize="12dp" />
+                                    android:textAlignment="textEnd"
+                                    android:layout_marginRight="10dp"
+                                    android:textSize="15sp" />
 
 
                             </LinearLayout>
@@ -238,7 +242,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
-                android:text="Dados Gerais:"
+                android:text="Índices Gerais:"
                 android:textColor="@android:color/black" />
 
             <!--Média Geral-->
@@ -305,8 +309,8 @@
                                         android:layout_height="26dp"
                                         android:layout_alignParentStart="true"
                                         android:layout_alignParentTop="true"
-                                        android:layout_marginEnd="4dp"
-                                        android:layout_marginTop="8dp"
+                                        android:layout_marginEnd="16dp"
+                                        android:layout_marginTop="4dp"
                                         android:text="100%:"
                                         android:textAlignment="textEnd"
                                         android:textColor="@color/colorPrimaryDark"
@@ -366,8 +370,8 @@
                                         android:layout_height="26dp"
                                         android:layout_alignParentStart="true"
                                         android:layout_alignParentTop="true"
-                                        android:layout_marginEnd="4dp"
-                                        android:layout_marginTop="8dp"
+                                        android:layout_marginEnd="16dp"
+                                        android:layout_marginTop="4dp"
                                         android:text="100%:"
                                         android:textAlignment="textEnd"
                                         android:textColor="@color/colorPrimaryDark"
@@ -440,8 +444,8 @@
                                         android:layout_height="26dp"
                                         android:layout_alignParentStart="true"
                                         android:layout_alignParentTop="true"
-                                        android:layout_marginEnd="4dp"
-                                        android:layout_marginTop="8dp"
+                                        android:layout_marginEnd="16dp"
+                                        android:layout_marginTop="4dp"
                                         android:text="100%:"
                                         android:textAlignment="textEnd"
                                         android:textColor="@color/colorPrimaryDark"
@@ -500,8 +504,8 @@
                                         android:layout_height="26dp"
                                         android:layout_alignParentStart="true"
                                         android:layout_alignParentTop="true"
-                                        android:layout_marginEnd="4dp"
-                                        android:layout_marginTop="8dp"
+                                        android:layout_marginEnd="16dp"
+                                        android:layout_marginTop="4dp"
                                         android:text="100%:"
                                         android:textAlignment="textEnd"
                                         android:textColor="@color/colorPrimaryDark"
@@ -532,6 +536,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/labelSpinner"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Selecione o Componente Curricular:"
